# twineq

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cmd_args_parser.cpp  cmd_args_parser.h  input_request.h  input_subsystem.cpp  input_subsystem.h  integrator_types.h  integrators.cpp  integrators.h  kernels.cpp  kernels.h  main.cpp  manual_solver.cpp  manual_solver.h  matrix_solver.cpp  matrix_solver.h  multithread_matrix_solver.cpp  multithread_matrix_solver.h  problem.cpp  problem.h  problem_file_io.cpp  problem_file_io.h  progress_counter.cpp  progress_counter.h  real_number.h  results_saver.cpp  results_saver.h  scalar_product_L2.cpp  scalar_product_L2.h  service_parameters_types.h  solution_launcher.cpp  solution_launcher.h  solver.cpp  solver.h  task.cpp  task.h  task_file_io.cpp  (+3 more)
Results/: exp_f_half.txt  exp_matrix.txt  exp_new_simpsons.txt  exp_plot.txt  exp_plot2.txt  exp_plot3.txt  exp_plot3_full.txt  mikhail_exp.txt  mikhail_rational.txt  rational_f_half.txt  rational_fp2_1.txt  rational_new_simpsons.txt  rational_new_trapezoid.txt  rational_plot.txt  rational_plot2.txt  rational_plot3.txt
